Fix footer overflowing

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -1636,3 +1636,8 @@ section {
   color: darkcyan;
   margin-top: -1em;
 }
+
+main {
+  min-height: 100vh;
+}
+
